--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,4 +11,10 @@
 @import "../components/Button/style";
 
 // menu
-@import "../components//Menu/style";
+@import "../components/Menu/style";
+
+// icon
+@import "../components/Icon/style";
+
+// react-transition
+@import "animation";
