--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,4 +20,7 @@
 @import "animation";
 
 // input
-@import "../components/Input/style"
+@import "../components/Input/style";
+
+// autoComplete
+@import "../components//AutoComplete/style"
