add `progress` components

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,4 +23,10 @@
 @import "../components/Input/style";
 
 // autoComplete
-@import "../components//AutoComplete/style"
+@import "../components//AutoComplete/style";
+
+// upload
+@import "../components//Upload/style";
+
+// progress
+@import "../components/Progress/style";
